tests/phase_00_lexer_errors/valid/05_block_comment_ok.hulk
// El lexer debe consumir completamente el comentario de bloque y luego reconocer el numero.
/* comentario de bloque */
42;
