tests/phase_00_lexer_errors/invalid/05_unclosed_block_comment.hulk
// El lexer debe reportar comentario de bloque sin cerrar al llegar a EOF.
/* comentario sin cerrar
42;
